tests/sources/should-compile/switch-case.c
int x = 5;
switch (x)
{
case 1:
    x + 1;
    break;
case 3:
    x + 1;
default:
    x + 1;
}

// switch (x + 2)
// {
// case 1:
//     x + 1;
// case 3:
//     x + 1;
// default:
//     x + 1;
// }