tests/sources/should-not-compile/while-extra-semi.c
int x = 10;
int y = 0;

while (x < 10;)
{
    x = x + 1;
}